--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,5 @@ theme: jekyll-theme-tactile
 
 url: http://www.zhuzhou.today
 
-webrick:
-  headers:
-    My-Header: My-Header-Value
-    My-Other-Header: My-Other-Header-Value
+site:
+  name: 今日株洲网
